--- a/templates/forgotPassword.htm
+++ b/templates/forgotPassword.htm
@@ -1,33 +1,16 @@
-<html>
-	<head>
-	  <title>Forgot Password</title>
-	  <style type="text/css">
-		span {
-		display: inline-block;
-		width: 80px;
-	    }
+	<div class="forgotPwdDiv">
+	<div><strong>Forgot Password</strong></div>
+	<div class="forgotPwdEmail">
+		<span>Email</span>
+		<input type="email">
+	</div>
+	<div class="forgotPwdLogin">
+		<span>LoginId</span>
+		<input type="text">
+	</div>
+	<div>
+		<input type="button" id="btnEmail" value="Send Email" ng-click="sendEmail()">
+	</div>
+	</div>
 
-	    #emailBtn,#forgotPwdBtn {
-		width: 150px;
-	    }
-	    div {
 
-	    	height : 30px;
-	    }
-	</style>
-	</head>
-	<body>
-		<div><strong>Forgot Password</strong></div>
-		<div>
-			<span>Email</span>
-			<input type="email">
-		</div>
-		<div>
-			<span>LoginId</span>
-			<input type="text">
-		</div>
-		<div>
-			<input type="button" id="emailBtn" value="Send Email" ng-click="sendEmail()">
-		</div>
-	</body>
-</html>
