--- a/templates/registration.htm
+++ b/templates/registration.htm
@@ -21,9 +21,10 @@
 
 	</style>
 </head>
-<body>
+<body>	
 	<div class="registrationContainer">
 		<h1>Welcome to Registration Page</h1>
+		<form name="userRegistrationDetails" action="GET" method="http//abc.com" novalidate>
 		<div>
 			<span>User Name </span>
 			<input type="text">
@@ -49,9 +50,10 @@
 			<textarea text="multiline"></textarea>
 		</div>
 		<div>
-			<input type="button" id="btnRegister" value="Register">
+			<input type="submit" id="btnRegister" value="Register">
 		</div>
 	</div>
+	</form>
 </body>
 </html>
 
